--- a/tcp1.html/tcp.html
+++ b/tcp1.html/tcp.html
@@ -5,9 +5,9 @@
 <title>Model TCP/IP</title>
 <meta charset="UTF-8">
 <meta name="Author" content="Roksana Fiołka">
-<meta name "robots" content="all"/>
-<meta name "description" content="Model TCP/IP (ang. Transmission Control Protocol/Internet Protocol)">
-<meta name "keywords" content="Model TCP/IP, definicja, schemat, warstwy, implementacja">
+<meta name="robots" content="all"/>
+<meta name="description" content="Model TCP/IP (ang. Transmission Control Protocol/Internet Protocol)">
+<meta name="keywords" content="Model TCP/IP, definicja, schemat, warstwy, implementacja">
 
 </head>
 
