--- a/tcp.html
+++ b/tcp.html
@@ -1,4 +1,4 @@
-<!<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="pl">
 <head>
 
@@ -50,7 +50,7 @@
 Istnieje także Lightweight TCP/IP, szerzej znany jako darmowy stos TCP/IP dla systemów wbudowanych, czyli będących integralną częścią obsługiwanego przez nie sprzętu - jest to stos protokołów dla systemów obsługujących zarówno amatorskie jak i zaawansowane urządzenia, często budowane z wykorzystaniem programowalnych układów FPGA (np. sprzętowe serwery WWW, FTP). Istnieją także proste stosy TCP/IP realizowane całkowicie sprzętowo.</p>
 <hr>
 <h4>Schemat</h4>
-<img src="tcp.png.png" width="550" height="350">
+<img src="img/tcp.png.png" width="550" height="350">
 <hr>
 <p>
   <strong> Przejdź do strony</strong> <a href="index1.html"> Model ISO/OSI</a> <a href="https://pl.wikipedia.org/wiki/Model_TCP/IP">Model TCP/IP</a> </p>
