--- a/index7.html
+++ b/index7.html
@@ -4,7 +4,7 @@
 <meta charset="utf-8">
 <meta name="Author" content="Roksana Fiołka">
 <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-<title>IPHONE CENTER</title>
+<title>Huawei Center</title>
 <link rel="stylesheet" href="style.css">
 <style>
     *{
