--- a/bootstrap.html
+++ b/bootstrap.html
@@ -2,6 +2,8 @@
 <html>
     <head>
         <meta charset="utf-8">
+        <meta name="Author" content="Roksana Fiołka">
+
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
 
@@ -63,11 +65,7 @@ h1{
   aside {width:30%;}
   main {width:65%;}
   }
-  @media (max
-  -
-  width: 1100px) and (min
-  -
-  width: 1000px) {
+  @media (max-width: 1100px) and (min-width: 1000px) {
   .container {width:950px;}
   aside {width:30%;}
   main {width:65%;}
