--- a/index7.html
+++ b/index7.html
@@ -5,103 +5,7 @@
 <meta name="Author" content="Roksana Fiołka">
 <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 <title>Huawei Center</title>
-<link rel="stylesheet" href="style.css">
-<style>
-    *{
-      padding:0;
-      margin:0;
-    }
-    html{
-      width:100%;
-    height: 100%;
-  }
-    .container{
-      width:1050px;
-      margin:0 auto;
-    }
-    header img{
-      width: 100%;
-    }
-    ul {
-  list-style-type: none;
-  margin: 0;
-  padding: 0;
-  width: 200px;
-  background-color: #c48484;
-}
-
-li a {
-  display: block;
-  color: #000;
-  padding: 8px 16px;
-  text-decoration: none;
-}
-
-li a.active {
-  background-color: #cc2b2b;
-  color: white;
-}
-
-li a:hover:not(.active) {
-  background-color: #555;
-  color: white;
-}
-header {
-margin:25px 0;
-background:#D4D4D4;
-}
-aside{
-  float:left;
-  width: 30%;
-  margin: 0 0 20px;
-}
-main{
-  float:right;
-  width:65%;
-margin:0 0 20px;
-background:#c48484;
-padding: 25px 25px 25px 10px;
-font-family:Palatino Linotype;
-
-}
-main img{
-  width: 60%;
-}
-padding:15px 15px 15px 30px;
-}
-main img {
-width:60%;
-}
-.footer {
-  background-color:#ad475c;
-  color: white;
-  margin: 10px;
-  padding: 10px;
-  clear:both;
-}
-@media (min-
-width: 1100px)
-{
-.container {width:1050px;}
-aside {width:30%;}
-main {width:65%;}
-}
-@media (max
--
-width: 1100px) and (min
--
-width: 1000px) {
-.container {width:950px;}
-aside {width:30%;}
-main {width:65%;}
-
-@media (max-width: 1000px) and (min-width: 800px) }
-
-  .container {width:750px;}
-aside {width:30%;}
-main{width:65%;}
-}
-</style>
+<link rel="stylesheet" href="css/style7.css">
 </head>
 <body>
   <div class="container">
